# VideoEdit

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  VideoEditJNI.cpp  mltJAVA_wrap.cpp  native-lib.cpp
app/src/main/cpp/ThirdPart/: CMakeLists.txt  build_ffmpeg.sh  build_mlt.sh
app/src/main/cpp/ThirdPart/prebuild/: CMakeLists.txt
app/src/main/cpp/ThirdPart/prebuild/ffmpeg/arm64-v8a/include/libavcodec/: avcodec.h  bsf.h  defs.h  packet.h
app/src/main/cpp/ThirdPart/prebuild/ffmpeg/arm64-v8a/include/libavfilter/: avfilter.h
app/src/main/cpp/ThirdPart/prebuild/ffmpeg/arm64-v8a/include/libavutil/: error.h  frame.h  hwcontext_vulkan.h  stereo3d.h  timecode.h
app/src/main/cpp/ThirdPart/prebuild/ffmpeg/arm64-v8a/include/libswresample/: swresample.h
app/src/main/cpp/ThirdPart/prebuild/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ThirdPart/prebuild/ffmpeg/arm64-v8a/share/ffmpeg/examples/: decode_audio.c  transcode_aac.c
app/src/main/cpp/ThirdPart/prebuild/mlt/arm64-v8a/include/mlt-7/framework/: mlt.h  mlt_animation.h  mlt_consumer.h  mlt_factory.h  mlt_filter.h  mlt_frame.h  mlt_multitrack.h  mlt_parser.h  mlt_playlist.h  mlt_producer.h  mlt_profile.h  mlt_properties.h  mlt_service.h  mlt_tractor.h  mlt_transition.h  mlt_types.h
app/src/main/cpp/ThirdPart/prebuild/mlt/arm64-v8a/include/mlt-7/mlt++/: Mlt.h  MltConfig.h  MltField.h  MltMultitrack.h  MltProperties.h  MltTractor.h
app/src/main/cpp/ThirdPart/prebuild/mlt/arm64-v8a/lib/cmake/Mlt7/: Mlt7Config.cmake  Mlt7Targets-debug.cmake  Mlt7Targets.cmake
app/src/main/cpp/ThirdPart/prebuild/mlt/arm64-v8a/lib/pkgconfig/: mlt++-7.pc  mlt-framework-7.pc
app/src/main/cpp/ThirdPart/prebuild/mlt/arm64-v8a/share/mlt-7/avformat/: consumer_avformat.yml  producer_avformat.yml
app/src/main/cpp/ThirdPart/prebuild/mlt/arm64-v8a/share/mlt-7/core/: filter_fieldorder.yml  filter_luma.yml  filter_mask_start.yml  filter_transition.yml  loader.dict  producer_timewarp.yml
app/src/main/cpp/ThirdPart/prebuild/mlt/arm64-v8a/share/mlt-7/plus/: filter_affine.yml
app/src/main/cpp/ThirdPart/prebuild/mlt/arm64-v8a/share/mlt-7/presets/consumer/avformat/: GIF  x264-medium  x264-medium-main  x265-medium
app/src/main/cpp/ThirdPart/prebuild/mlt/assets/share/mlt-7/core/: filter_mask_apply.yml  filter_watermark.yml  producer_colour.yml  producer_consumer.yml  producer_hold.yml  transition_composite.yml  transition_luma.yml
app/src/main/cpp/ThirdPart/prebuild/mlt/assets/share/mlt-7/plus/: producer_count.yml
app/src/main/cpp/ThirdPart/prebuild/mlt/assets/share/mlt-7/presets/consumer/avformat/: MPEG-4  MPEG-4-ASP  webp  x264-medium-baseline
app/src/main/cpp/ThirdPart/prebuild/mlt/lib/cmake/Mlt7/: Mlt7Config.cmake  Mlt7ConfigVersion.cmake  Mlt7Targets-debug.cmake
app/src/main/cpp/ThirdPart/prebuild/mlt/lib/pkgconfig/: mlt++-7.pc  mlt-framework-7.pc
app/src/main/cpp/ThirdPart/prebuild/mlt/share/man/man1/: melt.1
app/src/main/cpp/ThirdPart/test/: CMakeLists.txt  test.cpp
app/src/main/cpp/renderengine/: CMakeLists.txt  RenderEngine.cpp  RenderEngine.h  RenderEngineJNI.cpp
app/src/main/cpp/renderengine/chain/: Node.cpp  Node.h  RenderChain.cpp  RenderChain.h
app/src/main/cpp/renderengine/effect/: Effect.cpp  Effect.h
app/src/main/cpp/renderengine/log/: Log.cpp  Log.h
app/src/main/cpp/renderengine/render/: GLContext.cpp  GLContext.h  GLSurface.cpp  GLSurface.h
app/src/main/cpp/renderengine/utils/: FileUtils.cpp  FileUtils.h
app/src/main/cpp/utils/: CMakeLists.txt  Log.h  Platform.cpp  utils.h
app/src/main/cpp/videoedit/: CMakeLists.txt  VideoEdit.cpp  VideoEdit.h
gradle/wrapper/: gradle-wrapper.properties
(+160 files in other folders)
